[gd_scene load_steps=8 format=3 uid="uid://vcnjnkur4kww"]

[ext_resource type="Script" path="res://Scenes/Enemies/scout.gd" id="1_2tjxf"]
[ext_resource type="Texture2D" uid="uid://dodurqyroyjnx" path="res://graphics/enemies/scout.png" id="1_d2m1w"]
[ext_resource type="Shader" path="res://Scenes/Enemies/scout.gdshader" id="2_y1ipg"]
[ext_resource type="AudioStream" uid="uid://bra042wfgf44a" path="res://audio/solid_impact.ogg" id="4_vkwwu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rx4ce"]
radius = 745.011

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4yw8e"]
shader = ExtResource("2_y1ipg")
shader_parameter/u_color = Color(0.921569, 0.952941, 0.933333, 1)
shader_parameter/u_progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y3rnc"]
radius = 50.1597

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_2tjxf")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_rx4ce")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_4yw8e")
position = Vector2(34, 32)
rotation = 1.5708
texture = ExtResource("1_d2m1w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 11)
shape = SubResource("CircleShape2D_y3rnc")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(126, 14)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(112, -22)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vkwwu")
volume_db = -22.153

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
